--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
         "./slide2.html",
         "./slide3.html",
         "./slide4.html",
-        "./slide5.html",
-        "./slide6.html",
-        "./slide7.html",
-        "./slide8.html",
-        "./slide9.html",
-        "./slide10.html",
-        "./slide11.html",
-        "./slide12.html",
+        // "./slide5.html",
+        // "./slide6.html",
+        // "./slide7.html",
+        // "./slide8.html",
+        // "./slide9.html",
+        // "./slide10.html",
+        // "./slide11.html",
+        // "./slide12.html",
       ];
 
       async function loadSlides() {
