--- a/slide4.html
+++ b/slide4.html
@@ -31,7 +31,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start; /* Changed to flex-start */
+      justify-content: flex-start;
+      /* Changed to flex-start */
       background: linear-gradient(135deg, #f8faff, #eef2f7);
       text-align: center;
     }
@@ -99,15 +100,19 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      /* min-height: 100vh; */ /* Removed or adjusted */
+      /* min-height: 100vh; */
+      /* Removed or adjusted */
       background-color: var(--white);
-      padding: 0rem; /* Reduced padding */
-      margin-top: 2vh; /* Added to move box closer to header */
+      padding: 0rem;
+      /* Reduced padding */
+      margin-top: 2vh;
+      /* Added to move box closer to header */
     }
 
     .card-wrapper {
       width: 100%;
-      max-width: 80rem; /* Made the container smaller */
+      max-width: 80rem;
+      /* Made the container smaller */
       margin-left: auto;
       margin-right: auto;
       background-color: var(--white);
@@ -132,9 +137,11 @@
       display: flex;
       align-items: center;
     }
+
     .header-logo {
       margin-right: 1rem;
     }
+
     .header h2 {
       font-size: 1.5rem;
       font-weight: 700;
@@ -142,6 +149,7 @@
       letter-spacing: 0.025em;
       margin: 0;
     }
+
     .header p {
       font-size: 0.875rem;
       color: var(--slate-400);
@@ -256,19 +264,43 @@
     }
 
     @media (min-width: 640px) {
-      .main-container { padding: 0.5rem; } /* Adjusted padding */
-      .left-panel, .right-panel { padding: 3rem; }
-      .right-panel { grid-template-columns: repeat(2, 1fr); }
+      .main-container {
+        padding: 0.5rem;
+      }
+
+      /* Adjusted padding */
+      .left-panel,
+      .right-panel {
+        padding: 3rem;
+      }
+
+      .right-panel {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
 
     @media (min-width: 1024px) {
-      .main-container { padding: 1rem; } /* Adjusted padding */
-      .grid-container { grid-template-columns: repeat(2, 1fr); }
-      .left-panel { padding: 4rem; }
-      .left-panel .description { margin-top: 4rem; }
+      .main-container {
+        padding: 1rem;
+      }
+
+      /* Adjusted padding */
+      .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      .left-panel {
+        padding: 4rem;
+      }
+
+      .left-panel .description {
+        margin-top: 4rem;
+      }
     }
+
     .slide-header {
-      margin-bottom: 2vh; /* Reduced space below header */
+      margin-bottom: 2vh;
+      /* Reduced space below header */
     }
   </style>
 
@@ -286,13 +318,15 @@
           <header class="header">
             <div class="header-logo">
               <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" fill="url(#paint0_linear_logo)"/>
-                <path d="M14 14C16.5 11.5 23.5 11.5 26 14C28.5 16.5 28.5 23.5 26 26C23.5 28.5 16.5 28.5 14 26" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M14 26C11.5 23.5 11.5 16.5 14 14C16.5 11.5 23.5 11.5 26 14" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <circle cx="20" cy="20" r="20" fill="url(#paint0_linear_logo)" />
+                <path d="M14 14C16.5 11.5 23.5 11.5 26 14C28.5 16.5 28.5 23.5 26 26C23.5 28.5 16.5 28.5 14 26"
+                  stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M14 26C11.5 23.5 11.5 16.5 14 14C16.5 11.5 23.5 11.5 26 14" stroke="white" stroke-width="2.5"
+                  stroke-linecap="round" stroke-linejoin="round" />
                 <defs>
                   <linearGradient id="paint0_linear_logo" x1="0" y1="0" x2="40" y2="40" gradientUnits="userSpaceOnUse">
-                    <stop stop-color="#60A5FA"/>
-                    <stop offset="1" stop-color="#2563EB"/>
+                    <stop stop-color="#60A5FA" />
+                    <stop offset="1" stop-color="#2563EB" />
                   </linearGradient>
                 </defs>
               </svg>
@@ -304,19 +338,20 @@
           </header>
           <div class="description">
             <p>
-              For Infact, Fusefy will be building an AI-powered solution that empowers teachers with dynamic teaching tools. With interactive assistance, educators can generate tailored lesson plans, explore relevant topic options, and even receive ready-to-use presentations — making classroom learning more engaging and impactful.
+              In fact, Fusefy is developing an AI-powered solution designed to empower educators through dynamic teaching tools. With intelligent interactive assistance, teachers can seamlessly generate tailored lesson plans, explore a wide spectrum of relevant topic options, and access ready-to-use presentations — transforming classroom learning into a more engaging, efficient, and impactful experience.
             </p>
           </div>
           <div class="footer">
             <p class="footer-text">
               Together, we make education more personalized and effective.
             </p>
-           <button class="demo-button" onclick="window.open('https://app.storylane.io/share/ppzafgb2wm0i','_blank')">
-  <span>Launch Interactive Demo</span>
-  <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.25rem; width: 1.25rem;" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
-  </svg>
-</button>
+            <button class="demo-button" onclick="window.open('https://app.storylane.io/share/ppzafgb2wm0i','_blank')">
+              <span>Launch Interactive Demo</span>
+              <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.25rem; width: 1.25rem;" fill="none"
+                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+              </svg>
+            </button>
           </div>
         </div>
         <!-- Right Features Panel -->
@@ -324,8 +359,10 @@
           <!-- Feature 1 -->
           <div class="feature-card">
             <div class="icon-container">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
               </svg>
             </div>
             <h3>Dynamic Teaching Support</h3>
@@ -334,8 +371,10 @@
           <!-- Feature 2 -->
           <div class="feature-card">
             <div class="icon-container">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
               </svg>
             </div>
             <h3>Tailored Lesson Plans</h3>
@@ -344,8 +383,10 @@
           <!-- Feature 3 -->
           <div class="feature-card">
             <div class="icon-container">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V7a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V7a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
               </svg>
             </div>
             <h3>AI-Curated Presentations</h3>
@@ -354,8 +395,10 @@
           <!-- Feature 4 -->
           <div class="feature-card">
             <div class="icon-container">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
               </svg>
             </div>
             <h3>In-Depth Topic Exploration</h3>
