--- a/slide4.html
+++ b/slide4.html
@@ -345,13 +345,13 @@
             <p class="footer-text">
               Together, we make education more personalized and effective.
             </p>
-            <button class="demo-button" onclick="window.open('https://app.storylane.io/share/ppzafgb2wm0i','_blank')">
+            <!-- <button class="demo-button" onclick="window.open('https://app.storylane.io/share/e0pakklyyvjn','_blank')">
               <span>Launch Interactive Demo</span>
               <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.25rem; width: 1.25rem;" fill="none"
                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
               </svg>
-            </button>
+            </button> -->
           </div>
         </div>
         <!-- Right Features Panel -->
